--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
             <aside class="author">
                 <section>
                     <h4>Author :</h4>
-                    <a href="about.html"><img class="round" src="images/0.jfif" class="box-img"></a>
+                    <a href="https://shaik-irfan.netlify.app/"><img class="round" src="images/0.jfif"
+                            class="box-img"></a>
                 </section>
             </aside>
 
